--- a/gb/19/11/15/n11658142.md
+++ b/gb/19/11/15/n11658142.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fdgxsg329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fdgxsg329/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fdgxsg329/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fdgxsg329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fdgxsg329/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fdgxsg329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>梁天琦入选《时代》100 Next “不要被仇恨支配”</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2019年11月15日讯】（大纪元记者文华香港报导）2019年11月，美国《<ahref="https://github.com/fdgxsg329/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3.md#1">时代</a>》杂志首度推出“<ahref="https://github.com/fdgxsg329/djy/blob/master/gb/tag/%E4%B8%8B%E4%B8%96%E4%BB%A3%E7%99%BE%E5%A4%A7%E4%BA%BA%E7%89%A9.md#1">下世代百大人物</a>”（100 NEXT），选出全球正在改变未来的100位新星，入选名单中包括香港本土民主前线的前发言人<ahref="https://github.com/fdgxsg329/djy/blob/master/gb/tag/%E6%A2%81%E5%A4%A9%E7%90%A6.md#1">梁天琦</a>。</p>
-<h2><ahref="https://github.com/fdgxsg329/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3.md#1">时代</a>“下世代百大领袖”</h2>
-<p>《时代》杂志15年前开始选出全球最有影响力的100人，历年来不少国家元首、企业总裁等上榜，而今次选出的“100 NEXT”，共分五大类，分别是艺术家、倡议者、领袖、奇才及创新者，<ahref="https://github.com/fdgxsg329/djy/blob/master/gb/tag/%E6%A2%81%E5%A4%A9%E7%90%A6.md#1">梁天琦</a>列为领袖一类。</p>
+	<p>【大纪元2019年11月15日讯】（大纪元记者文华香港报导）2019年11月，美国《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3.md#1">时代</a>》杂志首度推出“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%8B%E4%B8%96%E4%BB%A3%E7%99%BE%E5%A4%A7%E4%BA%BA%E7%89%A9.md#1">下世代百大人物</a>”（100 NEXT），选出全球正在改变未来的100位新星，入选名单中包括香港本土民主前线的前发言人<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A2%81%E5%A4%A9%E7%90%A6.md#1">梁天琦</a>。</p>
+<h2><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3.md#1">时代</a>“下世代百大领袖”</h2>
+<p>《时代》杂志15年前开始选出全球最有影响力的100人，历年来不少国家元首、企业总裁等上榜，而今次选出的“100 NEXT”，共分五大类，分别是艺术家、倡议者、领袖、奇才及创新者，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A2%81%E5%A4%A9%E7%90%A6.md#1">梁天琦</a>列为领袖一类。</p>
 <p>《时代》杂志形容，梁天琦虽然因为参与2016年旺角警民冲突而正身在狱中，但数以万计示威者却高呼着由梁天琦提出的“光复香港，时代革命”口号，仍然是不少香港抗争者的精神领袖。他将本土主义带入香港主流，有关他的纪录片《地厚天高》亦被视为抗争者必看的作品。</p>
 <p>报道又指，虽然梁天琦无法参与示威，但他在今年7月在狱中向香港人发公开信，信中恳请大家不要被仇恨支配自己，在危难中，不要以自己宝贵的生命与当权者对赌，要时刻保持警觉与思考，呼吁要坚持下去。更认为:“我们需要的，不是以自己宝贵的生命和他们对赌，而是在苦难中炼成坚毅与盼望。”</p>
 <h2>香港本土派 袭警暴动被判刑</h2>
@@ -33,41 +33,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/16/8/28/n8244563.md#1">电影《十年》揭中共邪恶 引港台民众反思</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/16/10/8/n8378183.md#1">张德江乱政大起底(1) “乱港四人帮”现形</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/19/8/6/n11435827.md#1">全港反送中联席成立 开发布会回应港府</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/19/9/15/n11523350.md#1">香港监察召集人：极权政府低估港人的决心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/28/n8244563.md#1">电影《十年》揭中共邪恶 引港台民众反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/10/8/n8378183.md#1">张德江乱政大起底(1) “乱港四人帮”现形</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/6/n11435827.md#1">全港反送中联席成立 开发布会回应港府</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/15/n11523350.md#1">香港监察召集人：极权政府低估港人的决心</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/12/n13498418.md#1">【百年真相】掀开江姐的“英雄”面纱</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/12/n13500792.md#1">【未解之谜】宇宙是意识的产物？！</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/11/n13497077.md#1">黄檗禅师预言诗  解当今之局</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/13/n13501136.md#1">【奇缘】找到属猪的人富贵30年 北宋名将张永德奇缘</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/14/n13505150.md#1">【百年真相】接班人到阶下囚 王洪文的官场浮沉</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/19/n13515901.md#1">【新闻大家谈】中共海外“猎狐” 撒多大网？</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/18/n13514099.md#1">【新闻看点】习说反腐没胜利 传军头劝其退位</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/18/n13514157.md#1">【秦鹏直播】追随立陶宛 又一国欲与台互设代表处</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/16/n13509050.md#1">被抢救48小时 险成植物人 李嘉欣病因曝光</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/17/n13511372.md#1">中国出生率一降再降 专家：人口危机超想像</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/17/n13510125.md#1">内斗升级？ 习亲信陈一新放话力保二十大</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/16/n13509050.md#1">被抢救48小时 险成植物人 李嘉欣病因曝光</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/18/n13511813.md#1">命理师预言中共灭亡时间 台名嘴郑弘仪惊讶</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/16/n13509172.md#1">因监督减肥被邓超改称呼 孙俪笑说自己地位提升</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/18/n13513857.md#1">出道39年演技精湛 梁朝伟自曝最害怕一件事</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/17/n13509373.md#1">瘦身成功 弹古琴庆生 朱孝天笑称照片修过头</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/15/n13506631.md#1">红豆汤降血压、消水肿 2方法不再煮不烂</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/16/n13508778.md#1">中医10种好方法可帮助维护记忆力</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/14/n13505354.md#1">天冷什么羽绒服最暖？4秘诀挑选不失手</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/17/n13510890.md#1">为什么生姜是冬天的终极食材</a></li>
-<li><a href="https://github.com/fdgxsg329/djy/blob/master/gb/22/1/12/n13499853.md#1">人体对新冠有天然免疫力？1种血型不易感染</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fdgxsg329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fdgxsg329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/15/n11658142.htm">梁天琦入选《时代》100 Next “不要被仇恨支配”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/15/n11658142.htm">梁天琦入选《时代》100 Next “不要被仇恨支配”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fdgxsg329/djy/blob/master/gb/19/11/15/n11658142.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fdgxsg329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fdgxsg329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fdgxsg329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fdgxsg329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fdgxsg329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/11/15/n11658142.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
